--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "express": "~4.13.1",
+    "jasmine": "^3.0.0",
+    "mocha": "^5.0.1",
     "mz": "^2.7.0",
     "puppeteer": "^1.0.0"
   }
