--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,9 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "jasmine": "^3.0.0",
+    "mz": "^2.7.0",
+    "rwlock": "^5.0.0",
     "firebase-admin": "~5.12.0",
     "firebase-functions": "^1.0.1"
   },
