--- a/functions/package.json
+++ b/functions/package.json
@@ -10,11 +10,12 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "firebase-admin": "~5.12.0",
+    "firebase-functions": "^1.0.1",
     "jasmine": "^3.0.0",
     "mz": "^2.7.0",
     "rwlock": "^5.0.0",
-    "firebase-admin": "~5.12.0",
-    "firebase-functions": "^1.0.1"
+    "tempy": "^0.2.1"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
