--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
     "firebase-functions": "^1.0.1",
     "jasmine": "^3.0.0",
     "mz": "^2.7.0",
+    "performance-node": "^0.2.0",
     "rwlock": "^5.0.0",
     "tempy": "^0.2.1"
   },
