--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "firebase serve",
-    "deploy": "firebase deploy --only functions"
+    "deploy": "firebase deploy --only functions",
+    "lint": "npm --prefix functions run lint"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
